Use Chronicle Bytes instead of ByteArrayOutputStream.