@@ -106,11 +106,31 @@ subprojects {
     }
 
     compileJava {
-        options.compilerArgs += ["--enable-preview", "--add-modules=jdk.incubator.foreign"]
+        options.compilerArgs += ["--enable-preview",
+                                 "--add-modules=jdk.incubator.foreign",
+                                 "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
+                                 "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+                                 "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
+                                 "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+                                 "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED",
+                                 "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                                 "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+                                 "--add-opens=java.base/java.io=ALL-UNNAMED",
+                                 "--add-opens=java.base/java.util=ALL-UNNAMED"]
     }
 
     compileTestJava {
-        options.compilerArgs += ["--enable-preview", "--add-modules=jdk.incubator.foreign"]
+        options.compilerArgs += ["--enable-preview",
+                                 "--add-modules=jdk.incubator.foreign",
+                                 "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
+                                 "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+                                 "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
+                                 "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+                                 "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED",
+                                 "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                                 "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+                                 "--add-opens=java.base/java.io=ALL-UNNAMED",
+                                 "--add-opens=java.base/java.util=ALL-UNNAMED"]
     }
 
     spotless {
@@ -228,7 +248,18 @@ subprojects {
         }
         useTestNG()
         useJUnit()
-        jvmArgs(["--enable-preview", "--add-modules=jdk.incubator.foreign"])
+        jvmArgs(["--enable-preview",
+                 "--add-modules=jdk.incubator.foreign",
+                 "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
+                 "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+                 "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
+                 "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+                 "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED",
+                 "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                 "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+                 "--add-opens=java.base/java.io=ALL-UNNAMED",
+                 "--add-opens=java.base/java.util=ALL-UNNAMED"
+        ])
 
         minHeapSize = '2g'
         maxHeapSize = '7g'
